  * Add debian/gbp.conf
  * Bump Standards-Version to 4.1.2
  * Mark libgoa-1.0-doc as Multi-Arch: foreign
  * Add all of m4/ (except ax_config_dir.m4) to Files-Excluded so that
    we use the system versions instead
  * debian/libgoa-backend-1.0-1.symbols:
    Drop realmd symbols. The backend library is a "private" API
  * Don't recommend realmd: libkrb is used directly instead now.

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 15 Dec 2017 10:41:11 -0500

gnome-online-accounts (3.26.1-1) unstable; urgency=medium

  * New upstream release
  * Bump Standards-Version to 4.1.1

 -- Jeremy Bicha <jbicha@debian.org>  Tue, 03 Oct 2017 12:53:25 -0400

gnome-online-accounts (3.26.0-1) unstable; urgency=medium

  * New upstream translations release

 -- Jeremy Bicha <jbicha@debian.org>  Wed, 13 Sep 2017 06:34:22 -0400

gnome-online-accounts (3.25.92-1) unstable; urgency=medium

  * New upstream translations release

 -- Jeremy Bicha <jbicha@debian.org>  Tue, 05 Sep 2017 13:43:42 -0400

gnome-online-accounts (3.25.90-1) unstable; urgency=medium

  * New upstream release
  * debian/control.in:
    - Bump minimum libglib2.0-dev to 2.52
  * debian/rules: Explicitly enable Todoist and Telepathy
  * Add new symbols and drop 2 apparently unused symbols
    that are part of the "private" API
    - goa_oauth2_provider_get_authentication_cookie
    - goa_oauth_provider_get_authentication_cookie
  * Bump Standards-Version to 4.1.0

 -- Jeremy Bicha <jbicha@ubuntu.com>  Tue, 29 Aug 2017 20:14:26 -0400

gnome-online-accounts (3.22.5-1) unstable; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Sat, 11 Mar 2017 07:08:52 +0100

gnome-online-accounts (3.22.4-1) unstable; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Fri, 13 Jan 2017 23:24:29 +0100

gnome-online-accounts (3.22.3-2) unstable; urgency=medium

  * Add Breaks: evolution-data-server (<< 3.22.3). This ensures we don't taint