@@ -35,3 +35,11 @@ override_dh_install:
 override_dh_makeshlibs:
 	dh_makeshlibs -V -- -c4
 
+# This can be dropped if Ubuntu ever promotes dleyna-server to 'main'
+# https://launchpad.net/bugs/1738448
+override_dh_gencontrol:
+ifneq ($(shell dpkg-vendor --query vendor),Ubuntu)
+	dh_gencontrol -- -Vmedia-server:Depends='dleyna-server [linux-any]'
+else
+	dh_gencontrol
+endif
